--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -11,6 +11,6 @@
             <p> <a href="{% url "issue-view" issue.id %}" style="color: #b088f9">{{ issue.summary }}</a>. Статус: {{  issue.status }} </p>
         {% endfor %}
         {% endif %}
-      <a class="btn btn-light btn-lg" style="background-color: #da9ff9" href="#" role="button">Дополнить список задач</a>
+      <a class="btn btn-light btn-lg" style="background-color: #da9ff9" href="{% url "issue-create" %}" role="button">Дополнить список задач</a>
     </div>
 {% endblock content %}
