--- a/source/webapp/templates/issue_view.html
+++ b/source/webapp/templates/issue_view.html
@@ -15,8 +15,8 @@
               <p class="lead">{{ issue.description }}</p>
             {% endif%}
               <p class="lead">Дата создания: {{ issue.created_at }}</p>
-            <h4><a class="btn btn-light btn-m" style="background-color: #da9ff9" href="#">Редактировать задачу</a></h4>
-            <h4><a class="btn btn-light btn-m" style="background-color: #da9ff9" href="{% url "issue-delete" issue.id %}">Удалить</a></h4>
+            <h4><a class="btn btn-light btn-m" style="background-color: #da9ff9" href="{% url "issue-update" issue.id %}">Редактировать задачу</a></h4>
+            <h4><a class="btn btn-warning btn-m"  href="{% url "issue-delete" issue.id %}">Удалить</a></h4>
         </div>
     </div>
 
