--- a/source/webapp/templates/issue_form.html
+++ b/source/webapp/templates/issue_form.html
@@ -4,7 +4,12 @@
    <p style="color: red">{{ error }}</p>
 {% endfor %}
 
+
 {% for field in form %}
-    <p>{{ field.label }}:</p>
+   <p>{{ field.label }}: </p>
+    {% for error in field.errors %}
+       <p style="color: red">{{ error }}</p>
+   {% endfor %}
     <p>{{ field }}</p>
+    <br>
 {% endfor %}
