--- a/source/webapp/templates/issue/create.html
+++ b/source/webapp/templates/issue/create.html
@@ -4,8 +4,8 @@
     <div class="jumbotron" style="background-color: #f8f1f1">
     <h1>Новая задача</h1>
 
-    <form action="{% url "issue-create" %}" method="post">
-        {% include "partial/issue_form.html" %}
+    <form action="" method="post">
+        {% include "partial/form.html" %}
         <div class="col-sm-10">
           <input type="submit" value="Создать"/>
         </div>
