--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
     <body>
+    {% block navigation %}
     <nav class="navbar navbar-light" style="background-color: indigo;">
       <div class="container">
-        <a class="navbar-brand" style="color: gold" href="{% url "issue-list" %}">все задачи</a>
-        <a class="navbar-brand" style="color: gold"  href="{% url "issue-create" %}">новая задача</a>
+        <a class="navbar-brand" style="color: gold" href="{% url "project-list" %}">Главная</a>
+        <a class="navbar-brand" style="color: gold"  href="{% url "project-create" %}">Создать проект</a>
       </div>
     </nav>
+    {% endblock navigation %}
     {% block content %} {% endblock content %}
 </body>
 </html>
