изменено представление для  редактирования задачи

--- a/source/webapp/templates/issue/update.html
+++ b/source/webapp/templates/issue/update.html
@@ -6,9 +6,9 @@
     <h1>Редактировать задачу № {{ issue.id }}</h1>
 
     <form action="{% url "issue-update" issue.id %}" method="post">
-        {% include "partial/issue_form.html" %}
+        {% include "partial/form.html" %}
         <div class="col-sm-10">
-          <input type="submit" value="Обновить"/>
+          <input class="btn btn-success" type="submit" value="Обновить"/>
         </div>
 
     </form>
