--- a/source/accounts/templates/registration/login.html
+++ b/source/accounts/templates/registration/login.html
@@ -12,7 +12,7 @@
 <body>
     <div class="jumbotron fluid">
     <div class="container">
-    <form action="{% url 'login' %}" method="post">
+    <form action="{% url 'accounts:login' %}" method="post">
         {% csrf_token %}
         <div class="mb-3">
         {% if has_error %}
