--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -14,10 +14,11 @@
             <a class="navbar-brand" style="color: gold" href="{% url "project-list" %}">Главная</a>
             <a class="navbar-brand" style="color: gold"  href="{% url "project-create" %}">Создать проект</a>
             {% if user.is_authenticated %}
-            <a class="navbar-brand" style="color: gold"  href="{% url "logout" %}">Выход</a>
+            <a class="navbar-brand" style="color: gold"  href="{% url "accounts:logout" %}?next={{ request.get_full_path }}">Выход</a>
             {% else %}
-            <a class="navbar-brand" style="color: gold"  href="{% url "login" %}">Вход</a>
+            <a class="navbar-brand" style="color: gold"  href="{% url "accounts:login" %}?next={{ request.get_full_path }}">Вход</a>
             {% endif %}
+            <a class="navbar-brand" style="color: gold" href="{% url "accounts:register" %}">Регистрация</a>
         </div>
     </nav>
     {% endblock navigation %}
