добавлен включаемый шаблон для отображения списка проектов

--- a/source/webapp/templates/project/project_list.html
+++ b/source/webapp/templates/project/project_list.html
@@ -3,14 +3,7 @@
 {% block content %}
 
     <div class="jumbotron text-center" style="background-color: #f8f1f1">
-        <h1>Все проекты</h1>
-        {% if not projects %}
-            <h3>Проектов нет</h3>
-        {% else %}
-        {% for project in projects %}
-            <a href=" {% url 'project-view' project.id %}" style="color: #b088f9"><p>{{ project.summary }}</p></a>
-        {% endfor %}
-        {% endif %}
+        {% include 'partial/project_list.html' %}
     </div>
 
 {% endblock content %}
