--- a/source/webapp/templates/project/view.html
+++ b/source/webapp/templates/project/view.html
@@ -31,7 +31,7 @@
     {% else %}
         <h3 style="margin-top: 50px; color: darkorchid">Пользователи:</h3>
         {% for user in project.user.all %}
-            <p style="color: #b088f9">{{ user.username }}</p>
+            <p><a href="{% url 'accounts:user-detail' user.id %}" style="color: #b088f9">{{ user.username }}</a></p>
         {% endfor %}
     {% endif %}
     {% if perms.webapp.can_update_project_user and request.user in project.user.all %}
