--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -15,13 +15,17 @@
         {% if perms.webapp.add_project %}
             <a class="navbar-brand" style="color: gold"  href="{% url "project-create" %}">Создать проект</a>
         {% endif %}
-            {% if user.is_authenticated %}
+
+            <a class="navbar-brand" style="color: gold" href="{% url "accounts:register" %}">Регистрация</a>
+        {% if perms.accounts.can_view_user_list %}
+        <a class="navbar-brand" style="color: gold" href="{% url "accounts:user_list" %}">Все пользователи</a>
+        {% endif %}
+        {% if user.is_authenticated %}
             <a class="navbar-brand" style="color: gold"  href="{% url "accounts:logout" %}?next={{ request.get_full_path }}">Выход</a>
+            <a class="navbar-brand" style="color: rosybrown" href="{% url 'accounts:user-detail' request.user.id %}">{{ request.user }}</a>
             {% else %}
             <a class="navbar-brand" style="color: gold"  href="{% url "accounts:login" %}?next={{ request.get_full_path }}">Вход</a>
             {% endif %}
-            <a class="navbar-brand" style="color: gold" href="{% url "accounts:register" %}">Регистрация</a>
-        <a class="navbar-brand" style="color: rosybrown" href="{% url 'accounts:user-detail' request.user.id %}">{{ request.user }}</a>
         </div>
     </nav>
     {% endblock navigation %}
